fixed login button alignment control not working issue

--- a/assets/front-end/css/view/view.css
+++ b/assets/front-end/css/view/view.css
@@ -7041,6 +7041,12 @@ button.mfp-arrow:not(.toggle) {
 .d-none {
   display: none;
 }
+.mr-auto {
+  margin-right: auto;
+}
+.ml-auto {
+  margin-left: auto;
+}
 /*-----Form Specific---*/
 .eael-lr-form-wrapper {
   width: 370px;
